Сетка на гридах для внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -21,105 +21,117 @@
 		  	<nav class="main-navigation">
 		  		<a class="main-header-logo" href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
 		  		<ul class="site-navigation">
-		  			<li><a href="">Информация</a></li>
-		  			<li><a href="">Фото и видео</a></li>
-		  			<li><a href="">Карта штата</a></li>
-		  			<li><a href="">Гостиницы</a></li>		
+		  			<li class="menu-item-info"><a href="">Информация</a></li>
+		  			<li class="menu-item-photo"><a href="">Фото и видео</a></li>
+		  			<li class="menu-item-map"><a href="">Карта штата</a></li>
+		  			<li class="menu-item-catalog"><a href="catalog.html">Гостиницы</a></li>		
 		  		</ul>
 		  	</nav>
-		  </header>	
+		  </header>
 
-		<main class="container">
-			<h1>Поиск жилья</h1>
+			<main class="container">
+				<h1>Поиск жилья</h1>
 
-		  	<section>
-		  		<h2>Фильтр жилья</h2>
-		  		<form class="filter" action="https://echo.htmlacademy.ru" method="post">
-		  			<fieldset>
-		  				<legend>Инфаструктура</legend>
-		  				<ul class="filter-infrastructure">
-		  					<li class="filter-infrastructure-item">
-		  						<label for="filter-swimming-pool">Бассейн</label>
-		  						<input type="checkbox" name="Swimming pool" id="filter-swimming-pool">
-		  					</li>
-		  					<li class="filter-infrastructure-item">
-		  						<label for="filter-parking">Парковка</label>
-		  						<input type="checkbox" name="Parking" id="filter-parking">
-		  					</li>
-		  					<li class="filter-infrastructure-item">
-		  						<label for="filter-wifi">WI-FI</label>
-		  						<input type="checkbox" name="WI-FI" id="filter-wifi">
-		  					</li>
-		  				</ul>
-		  			</fieldset>
-		  			<fieldset>
-		  				<legend>Тип жилья</legend>
-		  				<ul class="filter-habitation">
-		  					<li class="filter-habitation-item">
-		  						<label for="filter-hotel">Гостиница</label>
-		  						<input type="checkbox" name="Hotel" id="filter-hotel">
-		  					</li>
-		  					<li class="filter-habitation-item">
-		  						<label for="filter-motel">Мотель</label>
-		  						<input type="checkbox" name="Motel" id="filter-motel">
-		  					</li>
-		  					<li class="filter-habitation-item">
-		  						<label for="filter-apartments">Апартаменты</label>
-		  						<input type="checkbox" name="Apartments" id="filter-apartments">
-		  					</li>
-		  				</ul>
-		  			</fieldset>
-		  			<label for="value">Стоимость в сутки,&#8381;</label>
-		  			<input class="value start-value" type="text" name="start-value" id="value">
-		  			<input class="value final-value" type="text" name="final-value">	
-		  			<button class="show" type="submit">Показать</button>
-		  		</form>
-		  	</section>
+			  	<section class="main-filter">
+			  		<h2>Фильтр жилья</h2>
+			  		<form class="filter" action="https://echo.htmlacademy.ru" method="post">
+			  			<fieldset class="infastructure">
+			  				<legend>Инфаструктура</legend>
+			  				<ul class="filter-infastructure">
+			  					<li class="filter-infastructure-item">
+			  						<label for="filter-swimming-pool">Бассейн</label>
+			  						<input type="checkbox" name="Swimming pool" id="filter-swimming-pool">
+			  					</li>
+			  					<li class="filter-infastructure-item">
+			  						<label for="filter-parking">Парковка</label>
+			  						<input type="checkbox" name="Parking" id="filter-parking">
+			  					</li>
+			  					<li class="filter-infastructure-item">
+			  						<label for="filter-wifi">WI-FI</label>
+			  						<input type="checkbox" name="WI-FI" id="filter-wifi">
+			  					</li>
+			  				</ul>
+			  			</fieldset>
+			  			<fieldset class="habitation">
+			  				<legend>Тип жилья</legend>
+			  				<ul class="filter-habitation">
+			  					<li class="filter-habitation-item">
+			  						<label for="filter-hotel">Гостиница</label>
+			  						<input type="checkbox" name="Hotel" id="filter-hotel">
+			  					</li>
+			  					<li class="filter-habitation-item">
+			  						<label for="filter-motel">Мотель</label>
+			  						<input type="checkbox" name="Motel" id="filter-motel">
+			  					</li>
+			  					<li class="filter-habitation-item">
+			  						<label for="filter-apartments">Апартаменты</label>
+			  						<input type="checkbox" name="Apartments" id="filter-apartments">
+			  					</li>
+			  				</ul>
+			  			</fieldset>
+			  			<div class="filter-value">
+				  			<label for="value">Стоимость в сутки,&#8381;</label><br>
+				  			<input class="value start-value" type="text" name="start-value" id="value">
+				  			<input class="value final-value" type="text" name="final-value">	
+				  			<button class="show" type="submit">Показать</button>
+			  			</div>
+			  		</form>
+			  	</section>
 
-		  	<section class="sorting">
-		  		<h2>Количество</h2>
-		  		<p>Сортировка:</p>
-		  		<a class="sorting-link value-sorting" href="">По цене</a>
-		  		<a class="sorting-link type-sorting" href="">По типу</a>
-		  		<a class="sorting-link rating-sorting" href="">По рейтингу</a>
-		  		<a class="decInc-link decrease-sorting" href="">&#11015;</a>
-		  		<a class="decInc-link increase-sorting" href="">&#11014;</a>
-		  	</section>
+			  	<section class="sorting">
+			  		<h2>Найдено: 3</h2>
+			  		<p>Сортировка:</p>
+			  		<div class="sorting-links">
+			  			<a class="sorting-link value-sorting" href="">По цене</a>
+			  			<a class="sorting-link type-sorting" href="">По типу</a>
+			  			<a class="sorting-link rating-sorting" href="">По рейтингу</a>
+			  		</div>
+			  		<div class="decInc-links">
+				  		<a class="decInc-link decrease-sorting" href="">&#11015;</a>
+				  		<a class="decInc-link increase-sorting" href="">&#11014;</a>
+				  	</div>
+			  	</section>
 
-		  	<section class="hotel-list">
-		  		<h2>Список гостиниц</h2>
-		  		<ul>
-		  			<li class="hotel-list-item">
-		  				<h3 class="hotel-heading"><a href="">Amara Resort & Spa</a></h3>
-		  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
-		  				<p>Гостиница</p>
-		  				<p>От 4000 &#8381;</p>
-		  				<a class="more-detailed" href="">Подробнее</a>
-		  				<a class="book" href="">Забронировать</a>
-		  				<p class="rating">Рейтинг: 8.5</p>
-		  			</li>
-		  			<li class="hotel-list-item">
-		  				<h3 class="hotel-heading"><a href="">Desert Quail Inn</a></h3>
-		  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
-		  				<p>Мотель</p>
-		  				<p>От 3000 &#8381;</p>
-		  				<a class="more-detailed" href="">Подробнее</a>
-		  				<a class="book" href="">Забронировать</a>
-		  				<p class="rating">Рейтинг: 8.9</p>
-		  			</li>
-		  			<li class="hotel-list-item">
-		  				<h3 class="hotel-heading"><a href="">Villas at Poco Diablo</a></h3>
-		  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото апартаментов Villas at Poco Diablo">
-		  				<p>Апартаменты</p>
-		  				<p>От 2000 &#8381;</p>
-		  				<a class="more-detailed" href="">Подробнее</a>
-		  				<a class="book" href="">Забронировать</a>
-		  				<p class="rating">Рейтинг: 9.2</p>
-		  			</li>
-		  		</ul>
-		  	</section>
+			  	<section class="hotel-list">
+			  		<h2>Список гостиниц</h2>
+			  		<ul>
+			  			<li class="hotel-list-item">
+			  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
+			  				<div class="description">
+				  				<h3 class="hotel-heading"><a href="">Amara Resort & Spa</a></h3>
+				  				<p>Гостиница</p>
+				  				<p>От 4000 &#8381;</p>
+				  				<a class="more-detailed" href="">Подробнее</a>
+				  				<a class="book" href="">Забронировать</a>
+				  			</div>
+				  			<p class="rating">Рейтинг: 8.5</p>
+			  			</li>
+			  			<li class="hotel-list-item">
+			  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
+			  				<div class="description">
+				  				<h3 class="hotel-heading"><a href="">Desert Quail Inn</a></h3>
+				  				<p>Мотель</p>
+				  				<p>От 3000 &#8381;</p>
+				  				<a class="more-detailed" href="">Подробнее</a>
+				  				<a class="book" href="">Забронировать</a>
+				  			</div>
+				  			<p class="rating">Рейтинг: 8.9</p>
+			  			</li>
+			  			<li class="hotel-list-item">
+			  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото апартаментов Villas at Poco Diablo">
+			  				<div class="description">
+				  				<h3 class="hotel-heading"><a href="">Villas at Poco Diablo</a></h3>
+				  				<p>Апартаменты</p>
+				  				<p>От 2000 &#8381;</p>
+				  				<a class="more-detailed" href="">Подробнее</a>
+				  				<a class="book" href="">Забронировать</a>
+				  			</div>
+				  			<p class="rating">Рейтинг: 9.2</p>
+			  			</li>
+			  		</ul>
+			  	</section>
 
-		</main>	
+			</main>	
 
 		  <footer class="main-footer">
 
