--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			  				<p>Седона — не аттракцион для туристов, там<br> течёт своя жизнь</p>
 			  			</div>
 		  			</li>
-		  			<li class="pov features-item">
-		  				<img class="pov" src="images/image.jpg" width="800" height="256" alt="Пейзаж_1">
+		  			<li class="first-image features-item">
+		  				<img src="images/image.jpg" width="800" height="256" alt="Пейзаж_1">
 		  			</li>
 		  			<li class="features-item-extra">
 		  				<div class="extra-text home">
@@ -72,7 +72,7 @@
 			  				<p>Не только китайского, но и местного<br> производства!</p>
 		  				</div>
 		  			</li>
-		  			<li class="pov1 features-item">
+		  			<li class="second-image features-item">
 		  				<img src="images/image_1.jpg" width="800" height="256" alt="Пейзаж_2">
 		  			</li>
 		  			<li class="features-item">
