--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 		<link rel="apple-touch-icon" href="favicon/180.png">
 		<link rel="manifest" href="manifest.webmanifest">
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="CSS/style.css">
+		<link rel="stylesheet" href="css/style.css">
   </head>
 
 	<body class="page-body">
