--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 		  <main class="container">
 		  	<h1>Седона</h1>
-		  	<p class="welcome">
+		  	<div class="welcome">
 		  		<img src="images/welcome.png" width="456.65" height="350.88">
-		  	</p>
+		  	</div>
 		  	<div class="text">
 		  		<h2>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
 		  		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
