--- a/catalog.html
+++ b/catalog.html
@@ -99,8 +99,10 @@
 			  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
 			  				<div class="description">
 				  				<h3 class="hotel-heading"><a href="">Amara Resort & Spa</a></h3>
-				  				<p>Гостиница</p>
-				  				<p>От 4000 &#8381;</p>
+				  				<div class="hotel-value">
+				  					<p>Гостиница</p>
+				  					<p>От 4000 &#8381;</p>
+				  				</div>	
 				  				<a class="more-detailed" href="">Подробнее</a>
 				  				<a class="book" href="">Забронировать</a>
 				  			</div>
@@ -110,8 +112,10 @@
 			  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
 			  				<div class="description">
 				  				<h3 class="hotel-heading"><a href="">Desert Quail Inn</a></h3>
-				  				<p>Мотель</p>
-				  				<p>От 3000 &#8381;</p>
+				  				<div class="hotel-value">
+				  					<p>Мотель</p>
+				  					<p>От 3000 &#8381;</p>
+				  				</div>
 				  				<a class="more-detailed" href="">Подробнее</a>
 				  				<a class="book" href="">Забронировать</a>
 				  			</div>
@@ -121,8 +125,10 @@
 			  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото апартаментов Villas at Poco Diablo">
 			  				<div class="description">
 				  				<h3 class="hotel-heading"><a href="">Villas at Poco Diablo</a></h3>
-				  				<p>Апартаменты</p>
-				  				<p>От 2000 &#8381;</p>
+				  				<div class="hotel-value">
+					  				<p>Апартаменты</p>
+					  				<p>От 2000 &#8381;</p>
+					  			</div>
 				  				<a class="more-detailed" href="">Подробнее</a>
 				  				<a class="book" href="">Забронировать</a>
 				  			</div>
