--- a/catalog.html
+++ b/catalog.html
@@ -30,10 +30,10 @@
 		  </header>
 
 			<main class="container">
-				<h1>Поиск жилья</h1>
+				<h1 class="visually-hidden">Поиск жилья</h1>
 
 			  	<section class="main-filter">
-			  		<h2>Фильтр жилья</h2>
+			  		<h2 class="visually-hidden">Фильтр жилья</h2>
 			  		<form class="filter" action="https://echo.htmlacademy.ru" method="post">
 			  			<fieldset class="infastructure">
 			  				<legend>Инфаструктура</legend>
@@ -93,7 +93,7 @@
 			  	</section>
 
 			  	<section class="hotel-list">
-			  		<h2>Список гостиниц</h2>
+			  		<h2 class="visually-hidden">Список гостиниц</h2>
 			  		<ul>
 			  			<li class="hotel-list-item">
 			  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
@@ -142,25 +142,29 @@
 		  <footer class="main-footer">
 
 		  	<section class="info">
-		  		<p>#visitSEDONA<br><a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
+		  		<p>#visitSEDONA</p>
+		  		<p><a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
 		  	</section>
 
 		  	<section class="footer-social">
 		  		<ul class="footer-social-list">
 		  			<li>
-		  				<div class="social-button twitter">
-		  					<a href="">Twitter</a>	
-		  				</div>
+		  				<a class="social-button" href="">
+		  					<span class="visually-hidden">Twitter</span>
+		  					<svg width="17" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.95 1.14a3.1 3.1 0 013.58 1.18c.67-.23 1.33-.48 2-.7a2.34 2.34 0 01-.85 1.76c.69.17 1.3-.49 1.3-.49-.16 1-1 1.79-1.56 2.03C15.2 11.67 12.25 16.13 5.34 16H4.9c-.41 0-4.17-.46-4.9-1.89 2.27.2 3.9-.42 4.7-1.18-.97-.3-2.69-.47-2.99-2.95.35.11.57.23 1.2.12C1.7 9.25.36 8.53.44 6.33a1.9 1.9 0 001.34.47c-.7-.24-1.97-3.36-.9-4.95 1.82 1.85 3.74 3.6 7.16 3.77.2-2.29 1.13-3.83 2.9-4.48z" fill="#fff"/></svg>
+		  				</a>
 		  			</li>
-		  			<li>
-		  				<div class="social-button facebook">
-		  					<a href="">Facebook</a>	
-		  				</div>
+		  			<li >
+		  				<a class="social-button" href="">
+		  					<span class="visually-hidden">Facebook</span>
+		  					<svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
+		  				</a>
 		  			</li>
-		  			<li>
-		  				<div class="social-button youtube">
-		  					<a href="">Youtube</a>	
-		  				</div>
+		  			<li class="social-button youtube">
+		  				<a class="social-button" href="">
+		  					<span class="visually-hidden">Youtube</span>
+		  					<svg width="20" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h14a3 3 0 013 3v10a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm3 4v8l9-4-9-4z" fill="#fff"/></svg>
+		  				</a>
 		  			</li>
 		  		</ul>
 		  	</section>
