--- a/index.html
+++ b/index.html
@@ -53,21 +53,18 @@
 		  			</li>
 		  			<li class="features-item-extra">
 		  				<div class="extra-text home">
-		  					<img src="images/home.svg" width="75" height="72">
 			  				<h3>Жильё</h3>
 			  				<p>Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
 		  				</div>
 		  			</li>
 		  			<li class="features-item-extra">
 		  				<div class="extra-text burger">
-		  					<img src="images/burger.svg" width="75" height="70">
 			  				<h3>Еда</h3>
 			  				<p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
 			  			</div>
 		  			</li>
 		  			<li class="features-item-extra">
-		  				<div class="extra-text">
-		  					<img src="images/present.svg" width="64" height="77">
+		  				<div class="extra-text present">
 			  				<h3>Сувениры</h3>
 			  				<p>Не только китайского, но и местного<br> производства!</p>
 		  				</div>
