--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		  	<nav class="main-navigation">
 		  		<a class="main-header-logo" href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
 		  		<ul class="site-navigation">
-		  			<li class="menu-item-info"><a href="">Информация</a></li>
-		  			<li class="menu-item-photo"><a href="">Фото и видео</a></li>
-		  			<li class="menu-item-map"><a href="">Карта штата</a></li>
-		  			<li class="menu-item-catalog"><a href="catalog.html">Гостиницы</a></li>		
+		  			<li class="menu-item menu-item-info"><a href="">Информация</a></li>
+		  			<li class="menu-item menu-item-photo"><a href="">Фото и видео</a></li>
+		  			<li class="menu-item menu-item-map"><a href="">Карта штата</a></li>
+		  			<li class="menu-item menu-item-catalog"><a href="catalog.html">Гостиницы</a></li>	
 		  		</ul>
 		  	</nav>
 		  </header>
