Исправление модального окна

--- a/index.html
+++ b/index.html
@@ -186,15 +186,15 @@
 		  		<div class="people-amount">
 			  		<label>Взрослые:</label>
 		  			<div class="amount">
-			  			<button class="button amount-button amount-button-plus" type="button">-</button>
+			  			<button class="button amount-button amount-button-minus" type="button">-</button>
 			  			<input type="text" name="adult-number" value="2">
-			  			<button class="button amount-button amount-button-minus" type="button">+</button>
+			  			<button class="button amount-button  amount-button-plus" type="button">+</button>
 		  			</div>
 		  			<label>Дети:</label>
 		  			<div class="amount">
-			  			<button class="button amount-button amount-button-plus" type="button">-</button>
+			  			<button class="button amount-button amount-button-minus" type="button">-</button>
 			  			<input type="text" name="children-number" value="0">
-			  			<button class="button amount-button amount-button-minus" type="button">+</button>
+			  			<button class="button amount-button amount-button-plus" type="button">+</button>
 			  		</div>
 			  		<button class="button searching-modal-button" type="submit">Найти</button>
 		  		</div>
