--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
 		  			<li class="menu-item menu-item-info"><a href="">Информация</a></li>
 		  			<li class="menu-item menu-item-photo"><a href="">Фото и видео</a></li>
 		  			<li class="menu-item menu-item-map"><a href="">Карта штата</a></li>
-		  			<li class="menu-item menu-item-catalog"><a href="catalog.html">Гостиницы</a></li>	
+		  			<li class="menu-item menu-item-catalog"><a href="catalog.html" class="current">Гостиницы</a></li>	
 		  		</ul>
 		  	</nav>
 		  </header>
@@ -39,8 +39,8 @@
 			  				<legend>Инфаструктура:</legend>
 			  				<ul class="filter-infastructure">
 			  					<li class="filter-infastructure-item">
-			  						<input class="filter-infastructure-checkbox" type="checkbox" name="Swimming pool" id="filter-swimming-pool">
 			  						<label for="filter-swimming-pool">Бассейн</label>
+			  						<input class="filter-infastructure-checkbox" type="checkbox" name="Swimming pool" id="filter-swimming-pool">
 			  					</li>
 			  					<li class="filter-infastructure-item">
 			  						<input class="filter-infastructure-checkbox" type="checkbox" name="Parking" id="filter-parking">
@@ -56,16 +56,16 @@
 			  				<legend>Тип жилья:</legend>
 			  				<ul class="filter-habitation">
 			  					<li class="filter-habitation-item">
-			  						<input class="filter-habitation-checkbox" type="checkbox" name="Hotel" id="filter-hotel">
 			  						<label for="filter-hotel">Гостиница</label>
+			  						<input class="filter-habitation-checkbox" type="checkbox" name="Hotel" id="filter-hotel">
 			  					</li>
 			  					<li class="filter-habitation-item">
-			  						<input class="filter-habitation-checkbox" type="checkbox" name="Motel" id="filter-motel">
 			  						<label for="filter-motel">Мотель</label>
+			  						<input class="filter-habitation-checkbox" type="checkbox" name="Motel" id="filter-motel">
 			  					</li>
 			  					<li class="filter-habitation-item">
-			  						<input class="filter-habitation-checkbox" type="checkbox" name="Apartments" id="filter-apartments">
 			  						<label for="filter-apartments">Апартаменты</label>
+			  						<input class="filter-habitation-checkbox" type="checkbox" name="Apartments" id="filter-apartments">
 			  					</li>
 			  				</ul>
 			  			</fieldset>
