Добавление aria-label

--- a/catalog.html
+++ b/catalog.html
@@ -84,8 +84,8 @@
 											<div class="scale">
 												<div class="bar"></div>
 							         </div>
-											<div class="toggle toggle-min"></div>
-											<div class="toggle toggle-max"></div>
+											<div class="toggle toggle-min" aria-label="Понизить цену"></div>
+											<div class="toggle toggle-max" aria-label="Увеличить цену"></div>
 										</div>
 									</div>
 				  			<button class="show" type="submit">Показать</button>
