--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,9 @@
   <head>
 	<meta charset="utf-8">
 	<title>Каталог</title>
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700 &display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 		<link rel="icon" href="favicon.ico">
 		<link rel="icon" type="image/svg+xml" href="favicon/icon.svg">
 		<link rel="apple-touch-icon" href="favicon/180.png">
