--- a/index.html
+++ b/index.html
@@ -150,11 +150,13 @@
 				  
 		  	</section>
 
-			<article class="map">
-			  	<div>
-			  		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050594344!2d-111.83015781619238!3d34.85437338108418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1624460698727!5m2!1sru!2sru" width="1200" height="594" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-			  	</div>
-		  </main>
+				<article class="map">
+				  	<div>
+				  		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050594344!2d-111.83015781619238!3d34.85437338108418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1624460698727!5m2!1sru!2sru" width="1200" height="594" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				  	</div>
+				</article>
+
+			</main>
 
 		  <footer class="main-footer">
 
