--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 		  	<section class="info">
 		  		<p>#visitSEDONA</p>
-		  		<p><a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
+		  		<a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
 		  	</section>
 
 		  	<section class="footer-social">
