--- a/index.html
+++ b/index.html
@@ -134,13 +134,15 @@
 					  		<label>Взрослые:</label>
 				  			<div class="amount">
 					  			<button class="button amount-button amount-button-minus" type="button" aria-label="Отнять">-</button>
-					  			<input type="text" name="adult-number" value="2">
+					  			<label class="visually-hidden" for="adult-number">Количесто взрослых</label>
+					  			<input type="text" name="adult-number" id="adult-number" value="2">
 					  			<button class="button amount-button  amount-button-plus" type="button" aria-label="Прибавить">+</button>
 				  			</div>
 				  			<label>Дети:</label>
 				  			<div class="amount">
 					  			<button class="button amount-button amount-button-minus" type="button" aria-label="Отнять">-</button>
-					  			<input type="text" name="children-number" value="0">
+					  			<label class="visually-hidden" for="children-number">Количесто детей</label>
+					  			<input type="text" name="children-number" id="children-number" value="0">
 					  			<button class="button amount-button amount-button-plus" type="button" aria-label="Прибавить">+</button>
 					  		</div>
 					  		<button class="button searching-modal-button" type="submit">Найти</button>
