--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 		  <header class="main-header">
 		  	<nav class="main-navigation">
-		  		<a class="main-header-logo" href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
+		  		<a class="main-header-logo" href="index.html">
+		  			<img src="images/logo.svg" width="138" height="70" alt="Логотип сайта">
+		  		</a>
 		  		<ul class="site-navigation">
 		  			<li class="menu-item menu-item-info"><a href="#">Информация</a></li>
 		  			<li class="menu-item menu-item-photo"><a href="#">Фото и видео</a></li>
