--- a/catalog.html
+++ b/catalog.html
@@ -192,7 +192,7 @@
 		  		</ul>
 		  	</section>
 
-		  	<a href="https://htmlacademy.ru/study" class="footer-copyright">
+		  	<a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-copyright">
 			  		<p>Website by</p>
 			  		<svg width="115" height="34" viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<g clip-path="url(#clip0)">
