--- a/catalog.html
+++ b/catalog.html
@@ -24,10 +24,10 @@
 		  			<img src="images/logo.svg" width="138" height="70" alt="Логотип сайта">
 		  		</a>
 		  		<ul class="site-navigation">
-		  			<li class="menu-item menu-item-info"><a href="">Информация</a></li>
-		  			<li class="menu-item menu-item-photo"><a href="">Фото и видео</a></li>
-		  			<li class="menu-item menu-item-map"><a href="">Карта штата</a></li>
-		  			<li class="menu-item menu-item-catalog"><a href="catalog.html" class="curr">Гостиницы</a></li>	
+		  			<li class="menu-item menu-item-info"><a href="#">Информация</a></li>
+		  			<li class="menu-item menu-item-photo"><a href="#">Фото и видео</a></li>
+		  			<li class="menu-item menu-item-map"><a href="#">Карта штата</a></li>
+		  			<li class="menu-item menu-item-catalog"><a href="catalog.html" class="current">Гостиницы</a></li>	
 		  		</ul>
 		  	</nav>
 		  </header>
