--- a/catalog.html
+++ b/catalog.html
@@ -101,15 +101,15 @@
 			  		<h2>Найдено: 3</h2>
 			  		<p>Сортировка:</p>
 			  		<div class="sorting-links">
-			  			<a class="sorting-link value-sorting" href="">По цене</a>
-			  			<a class="sorting-link type-sorting" href="">По типу</a>
-			  			<a class="sorting-link rating-sorting" href="">По рейтингу</a>
+			  			<a class="sorting-link value-sorting" href="#">По цене</a>
+			  			<a class="sorting-link type-sorting" href="#">По типу</a>
+			  			<a class="sorting-link rating-sorting" href="#">По рейтингу</a>
 			  		</div>
 			  		<div class="decInc-links">
-				  		<a class="decInc-link decrease-sorting" href=""><svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+				  		<a class="decInc-link decrease-sorting" href="#" aria-label="Сортировка по убыванию"><svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M5.5 0L0 10H11L5.5 0Z" fill="#CACACA"/>
 								</svg></a>
-				  		<a class="decInc-link increase-sorting" href=""><svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+				  		<a class="decInc-link increase-sorting" href="#" aria-label="Сортировка по возрастанию"><svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M5.5 10L0 0H11" fill="#81B3D2"/>
 								</svg></a>
 				  	</div>
@@ -121,13 +121,13 @@
 			  			<li class="hotel-list-item">
 			  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
 			  				<div class="description">
-				  				<h3 class="hotel-heading"><a href="">Amara Resort & Spa</a></h3>
+				  				<h3 class="hotel-heading"><a href="#">Amara Resort & Spa</a></h3>
 				  				<div class="hotel-value">
 				  					<p>Гостиница</p>
 				  					<p>От 4000 &#8381;</p>
 				  				</div>	
-				  				<a class="more-detailed" href="">Подробнее</a>
-				  				<a class="book" href="">Забронировать</a>
+				  				<a class="more-detailed" href="#">Подробнее</a>
+				  				<a class="book" href="#">Забронировать</a>
 				  			</div>
 				  			<p class="rating">Рейтинг: 8.5</p>
 			  			</li>
@@ -139,8 +139,8 @@
 				  					<p>Мотель</p>
 				  					<p>От 3000 &#8381;</p>
 				  				</div>
-				  				<a class="more-detailed" href="">Подробнее</a>
-				  				<a class="book" href="">Забронировать</a>
+				  				<a class="more-detailed" href="#">Подробнее</a>
+				  				<a class="book" href="#">Забронировать</a>
 				  			</div>
 				  			<p class="rating">Рейтинг: 8.9</p>
 			  			</li>
@@ -152,8 +152,8 @@
 					  				<p>Апартаменты</p>
 					  				<p>От 2000 &#8381;</p>
 					  			</div>
-				  				<a class="more-detailed" href="">Подробнее</a>
-				  				<a class="book" href="">Забронировать</a>
+				  				<a class="more-detailed" href="#">Подробнее</a>
+				  				<a class="book" href="#">Забронировать</a>
 				  			</div>
 				  			<p class="rating">Рейтинг: 9.2</p>
 			  			</li>
@@ -172,19 +172,19 @@
 		  	<section class="footer-social">
 		  		<ul class="footer-social-list">
 		  			<li>
-		  				<a class="social-button" href="">
+		  				<a class="social-button" href="#">
 		  					<span class="visually-hidden">Twitter</span>
 		  					<svg width="17" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.95 1.14a3.1 3.1 0 013.58 1.18c.67-.23 1.33-.48 2-.7a2.34 2.34 0 01-.85 1.76c.69.17 1.3-.49 1.3-.49-.16 1-1 1.79-1.56 2.03C15.2 11.67 12.25 16.13 5.34 16H4.9c-.41 0-4.17-.46-4.9-1.89 2.27.2 3.9-.42 4.7-1.18-.97-.3-2.69-.47-2.99-2.95.35.11.57.23 1.2.12C1.7 9.25.36 8.53.44 6.33a1.9 1.9 0 001.34.47c-.7-.24-1.97-3.36-.9-4.95 1.82 1.85 3.74 3.6 7.16 3.77.2-2.29 1.13-3.83 2.9-4.48z" fill="#fff"/></svg>
 		  				</a>
 		  			</li>
 		  			<li >
-		  				<a class="social-button" href="">
+		  				<a class="social-button" href="#">
 		  					<span class="visually-hidden">Facebook</span>
 		  					<svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
 		  				</a>
 		  			</li>
 		  			<li class="social-button youtube">
-		  				<a class="social-button" href="">
+		  				<a class="social-button" href="#">
 		  					<span class="visually-hidden">Youtube</span>
 		  					<svg width="20" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h14a3 3 0 013 3v10a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm3 4v8l9-4-9-4z" fill="#fff"/></svg>
 		  				</a>
