--- a/catalog.html
+++ b/catalog.html
@@ -76,10 +76,10 @@
 								<legend>Стоимость в сутки,&#8381;</legend>
 									<div class="price-controls">
 										<label class="min-price">
-											<input type="number" name="min-price" value="0" placeholder="ОТ 0">
+											<input type="text" name="min-price" placeholder="от 0">
 										</label>
 										<label class="max-price">
-											<input type="number" name="max-price" value="15000" placeholder="ДО 3000">
+											<input type="text" name="max-price" placeholder="до 3000">
 										</label>
 									</div>
 									<div class="range-filter">
