--- a/catalog.html
+++ b/catalog.html
@@ -43,15 +43,15 @@
 			  				<ul class="filter-infastructure">
 			  					<li class="filter-infastructure-item">
 			  						<input class="filter-infastructure-checkbox" type="checkbox" name="Swimming pool" id="filter-swimming-pool">
-			  						<label for="filter-swimming-pool">Бассейн</label>
+			  						<label for="filter-swimming-pool" tabindex="0">Бассейн</label>
 			  					</li>
 			  					<li class="filter-infastructure-item">
 			  						<input class="filter-infastructure-checkbox" type="checkbox" name="Parking" id="filter-parking">
-			  						<label for="filter-parking">Парковка</label>
+			  						<label for="filter-parking" tabindex="0">Парковка</label>
 			  					</li>
 			  					<li class="filter-infastructure-item">
 			  						<input class="filter-infastructure-checkbox" type="checkbox" name="WI-FI" id="filter-wifi">
-			  						<label for="filter-wifi">WI-FI</label>
+			  						<label for="filter-wifi" tabindex="0">WI-FI</label>
 			  					</li>
 			  				</ul>
 			  			</fieldset>
@@ -60,15 +60,15 @@
 			  				<ul class="filter-habitation">
 			  					<li class="filter-habitation-item">
 			  						<input class="filter-habitation-checkbox" type="checkbox" name="Hotel" id="filter-hotel">
-			  						<label for="filter-hotel">Гостиница</label>
+			  						<label for="filter-hotel" tabindex="0">Гостиница</label>
 			  					</li>
 			  					<li class="filter-habitation-item">
 			  						<input class="filter-habitation-checkbox" type="checkbox" name="Motel" id="filter-motel">
-			  						<label for="filter-motel">Мотель</label>
+			  						<label for="filter-motel" tabindex="0">Мотель</label>
 			  					</li>
 			  					<li class="filter-habitation-item">
 			  						<input class="filter-habitation-checkbox" type="checkbox" name="Apartments" id="filter-apartments">
-			  						<label for="filter-apartments">Апартаменты</label>
+			  						<label for="filter-apartments" tabindex="0">Апартаменты</label>
 			  					</li>
 			  				</ul>
 			  			</fieldset>
