--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="apple-touch-icon" href="favicon/180.png">
 		<link rel="manifest" href="manifest.webmanifest">
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page-body">
   	<div class="wrapper">
